core/scss/components/select/select.scss
/** @component select */

@include exports('md-select') {
  .#{$select__class} {
    > .#{$select-button__class} {
      @include button-color(
        $color: $select__color,
        $bg: $select--input__background-color,
        $bg-hover: $select--input__background-color--hover,
        $bg-active: $select--input__background-color
      );
      @include button-size($radius: $input__border-radius);

      margin: $select-input__margin;

      .#{$dark-class} & {
        @include button-color(
          $color: $select__color--dark,
          $bg: $select--input__background-color--dark,
          $bg-hover: $select--input__background-color--hover--dark,
          $bg-active: $select--input__background-color--dark
        );
        @include button-size($radius: $input__border-radius);
      }

      &.disabled,
      &.md-button--disabled,
      &[disabled] {
        @include border-radius($input__border-radius);

        .#{$select-label__class} {
          @include flex($jc: space-between);

          > i,
          > .#{$icon__class} {
            color: $select__icon--disabled;

            path {
              fill: $select__icon--disabled;
            }

            .#{$dark-class} & {
              color: $select__icon--disabled--dark;

              path {
                fill: $select__icon--disabled--dark;
              }
            }
          }
        }
      }

      .#{$select-label__class} {
        width: 100%;
        @include flex($jc: space-between);

        > i,
        > .#{$icon__class} {
          color: $input__font-color;

          path {
            fill: $input__font-color;
          }

          .#{$dark-class} & {
            color: $input__font-color--dark;

            path {
              fill: $input__font-color--dark;
            }
          }
        }
      }
    }
    .#{$prefix}-event-overlay__children {
      max-height: $dropdown-height;
      overflow: auto;
      border: $select--children__border;
      box-shadow: $select--children__box-shadow;

      .#{$list-item__class} {
        .#{$dark-class} & {
          @include list-item-color;
        }
      }
      // One pixel less than Event Overlay per Designers comments
      .#{$list-item__class}:first-of-type {
        border-radius: 4px 4px 0 0;
      }

      .#{$list-item__class}:last-of-type {
        border-radius: 0 0 4px 4px;
      }
    }

  }
  .#{$select__class}__dropdown {
    background: $md-white-100;
    border-radius: $event-overlay__border-radius;
    box-shadow: $event-overlay__border, $event-overlay__shadow;
    display: flex;
    flex-direction: column;

    .md-input-container.md-search-input {
      margin: rem-calc(12) rem-calc(12) 0 rem-calc(12);

      .md-icon {
        margin-left: 12px;
        margin-right: 12px;
      }

      .md-input  {
        padding-left: rem-calc(37);
      }
    }
  }

  .md-select__filter {
    &--empty {
      list-style-type: none;
      padding: .5rem;
      margin-left: rem-calc(12);
    }
  }

  .md-select__filter.md-input-container.md-search-input {
    margin-bottom: 0;
  }
  .#{$select__class}__dropdown {
    background: $md-white-100;
    border-radius: $event-overlay__border-radius;
    box-shadow: $event-overlay__border, $event-overlay__shadow;
  }
}

